--- a/PVAT_MDDG_POC.css
+++ b/PVAT_MDDG_POC.css
@@ -49,6 +49,15 @@
   background: var(--nav-btn-bg);
 }
 
+#controls--next-button:not(.modal-content *):focus-visible,
+#controls--start-button:not(.modal-content *):focus-visible,
+#controls--back-button:not(.modal-content *):focus-visible,
+#controls--more-practice-button:not(.modal-content *):focus-visible,
+#controls--end-session-button:not(.modal-content *):focus-visible {
+  box-shadow: none;
+  background: var(--nav-btn-bg-hover) !important;
+}
+
 /* Directional spacing */
 #controls--next-button:not(.modal-content *),
 #controls--start-button:not(.modal-content *) {
@@ -95,8 +104,11 @@
   clip-path: polygon(0 0, 100% 50%, 0 100%);
 }
 
-#controls--next-button:not(.modal-content *):hover::after,
-#controls--start-button:not(.modal-content *):hover::after {
+#controls--next-button:not(.modal-content *):is(:hover, :focus-visible)::after,
+#controls--start-button:not(.modal-content *):is(
+    :hover,
+    :focus-visible
+  )::after {
   background: var(--nav-btn-bg-hover) !important;
 }
 
@@ -120,9 +132,15 @@
   clip-path: polygon(100% 0, 0 50%, 100% 100%);
 }
 
-#controls--back-button:not(.modal-content *):hover::after,
-#controls--more-practice-button:not(.modal-content *):hover::after,
-#controls--end-session-button:not(.modal-content *):hover::after {
+#controls--back-button:not(.modal-content *):is(:hover, :focus-visible)::after,
+#controls--more-practice-button:not(.modal-content *):is(
+    :hover,
+    :focus-visible
+  )::after,
+#controls--end-session-button:not(.modal-content *):is(
+    :hover,
+    :focus-visible
+  )::after {
   background: var(--nav-btn-bg-hover) !important;
 }
 
