Fix CSS selector for page instructions

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -246,7 +246,7 @@ body {
   width: auto;
 }
 
-.page-instructions.2.0 #content > div > div:nth-child(2) > div {
+.page-instructions\.2\.0 #content > div > div:nth-child(2) > div {
   display: none;
 }
 
